--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site Info
-title:              "The Plain"
+title:              "SoYoung Park"
 description:        "The Plain is a minimalist Jekyll theme, that's it. Can't say anymore..."
 google_verify:      epFgX0s_0RM3CdjwFcsewfXzPov2g8s9ZBOLyaIUH-o # Put your Google Verification here
 google_analytics:   UA-XXXXXXX-X # Put your Google Analytics code
