--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ resume: true
 resume-external: true
 resume-url: assets/resume.pdf
 
-url: http://soyoungpark.online/
+url: http://soyoungpark.online
 # your url: http://USERNAME.github.io
 
 permalink: /:title/
