--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ description: A blog about technology and stuff related
 
 # if it's an external image, update below for true
 # better with square images
-external-image: true
+external-image: false
 picture: assets/images/unithon.jpg
 
 # If you want to include your resume, set to true
