--- a/_config.yml
+++ b/_config.yml
@@ -56,7 +56,7 @@ authors:
     soyoungpark:
         name: SoYoung Park
         bio: computer science + urban studies 
-        external-image: true
+        external-image: false
         picture: assets/images/soyoungpark.jpg
         twitter: soyoung_park
     jamesfoster:
