--- a/_config.yml
+++ b/_config.yml
@@ -44,7 +44,7 @@ linkedin: soyoungpark05
 # spotify: myspotify
 github: soyoungpark
 # lastfm: mylastfm
-stackoverflow: 3645789/ampersands
+# stackoverflow: 3645789/ampersands
 # quora: userquora
 # reddit: username
 # medium: medium
