--- a/_config.yml
+++ b/_config.yml
@@ -50,7 +50,7 @@ github: soyoungpark
 # medium: medium
 # vimeo: myvimeo
 # lanyrd: mylanyrd
-email: ampersands.exit@gmail.com
+email: soyoung@sas.upenn.edu
 
 authors:
     soyoungpark:
