--- a/_config.yml
+++ b/_config.yml
@@ -7,8 +7,8 @@ description: A blog about technology and stuff related
 
 # if it's an external image, update below for true
 # better with square images
-external-image: true
-picture: www.soyoungpark.online/assets/images/soyoungpark.jpg
+external-image: false
+picture: assets/images/soyoungpark.jpg
 
 # If you want to include your resume, set to true
 # and specify source (external or local).
@@ -16,7 +16,7 @@ resume: true
 resume-external: true
 resume-url: assets/resume.pdf
 
-url: http://soyoungpark.online
+url: http://soyoungpark.github.io
 # your url: http://USERNAME.github.io
 
 permalink: /:title/
@@ -56,8 +56,8 @@ authors:
     soyoungpark:
         name: SoYoung Park
         bio: computer science + urban studies 
-        external-image: true
-        picture: www.soyoungpark.online/assets/images/soyoungpark.jpg
+        external-image: false
+        picture: assets/images/soyoungpark.jpg
         twitter: soyoung_park
     jamesfoster:
         name: James Foster
