--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # main text of home
 name: SoYoung Park
-bio: engineer with urban studies background | Penn'17 
+bio: software engineer, focusing on urban data | Penn'17 
 
 # twitter summary info
 description: A blog about technology and stuff related
