I changed my name to all caps

--- a/_config.yml
+++ b/_config.yml
@@ -54,7 +54,7 @@ email: soyoung@sas.upenn.edu
 
 authors:
     soyoungpark:
-        name: SoYoung Park
+        name: SOYOUNG PARK
         bio: computer science + urban studies 
         external-image: false
         picture: assets/images/soyoungpark.jpg
