--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ picture: assets/images/soyoungpark.jpg
 # If you want to include your resume, set to true
 # and specify source (external or local).
 resume: true
-resume-external: true
+resume-external: false
 resume-url: assets/resume.pdf
 
 url: http://soyoungpark.github.io
