--- a/_config.yml
+++ b/_config.yml
@@ -62,7 +62,7 @@ paginate: 5
 paginate_path: "blog/:num/"
 
 # if you don't need projects, comment the *projects* configs below
-# projects: true
+projects: false
 
 # if you don't need "about" or "blog", comment them out below
 about: true
